Registration and Login with redirect implemented

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     
     <title>Instagram CLONE</title>
+    <script src="https://kit.fontawesome.com/b196eacd06.js" crossorigin="anonymous"></script>
   </head>
   <body>
     
