post upload layout

--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,16 @@
       name="description"
       content="Web site for IT Talents | Instagram CLone"
     />
-    
+
+
     <title>Instagram CLONE</title>
-    <script src="https://kit.fontawesome.com/b196eacd06.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/b196eacd06.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-   
   </body>
 </html>
