Refactored Code! Very important changes! Please pay attention  on merging

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,12 @@
       content="Web site for IT Talents | Instagram CLone"
     />
 
-
     <title>Instagram CLONE</title>
+    <!-- <link
+      href="//db.onlinewebfonts.com/c/31ed0189fe1ff1e740a652e0f75b77dc?family=Snell+Roundhand"
+      rel="stylesheet"
+      type="text/css"
+    /> -->
     <script
       src="https://kit.fontawesome.com/b196eacd06.js"
       crossorigin="anonymous"
