index.html updated

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site for IT Talents | Instagram CLone"
+      content="Web site for IT Talents | Instagram Clone"
     />
 
-    <title>Instagram CLONE</title>
+    <title>300gram | Instagram CLONE</title>
     
     <script
       src="https://kit.fontawesome.com/b196eacd06.js"
